travis yml modified

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
   - docker run -e CI=true oxhe2038/react-test-app npm run test
 
 after_success:
-  - docker build -t oxhe2038/docker-frontend ./fronted
+  - docker build -t oxhe2038/docker-frontend ./frontend
   - docker build -t oxhe2038/docker-backend ./backend
   - docker build -t oxhe2038/docker-nginx ./nginx
   - echo "$DOCKER_HUB_PASSWORD" | docker login -u "$DOCKER_HUB_ID" --password-stdin
